--- a/index.html
+++ b/index.html
@@ -4,31 +4,98 @@
 	<title>Pontinho de Luz</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="style.css">
+	<link href="Fontes/Raleway-Bold.ttf" rel="stylesheet">
 </head>
 <body>
 	<header>
 		<img class="imgheader" src="PL - Assets/logo-pontinhodeluz.svg">
 		<nav>
 			<ul class="nav"> 
-		    	<li class="li1"><a href="#">Inicio</a></li> 
-		    	<li><a href="#">Sobre</a></li> 
-		    	<li><a href="#">Programas</a></li>
-		    	<li><a href="#">Campanhas</a></li> 
-		    	<li><a href="#">Faça Parte</a></li>
-		    	<li><a href="#">Contato</a></li>   
+		    	<a href="#1" class="li1"><li>Inicio</li></a> 
+		    	<a href="#2" class="li2"><li>Sobre</li></a>
+		    	<a href="#3" class="li2"><li>Programas</li></a>
+		    	<a href="#4" class="li2"><li>Campanhas</li></a> 
+		    	<a href="#5" class="li2"><li>Faça Parte</li></a>
+		    	<a href="#6" class="li2"><li>Contato</li></a>
 	    	<ul> 
 		</nav>
 	</header>
 	<main>
-		<section>
-			<p>ACREDITAMOS NA FORÇA DA SOLIDARIEDADE E DO AMOR AO PRÓXIMO COMO MULTIPLICADORA DE GENTILIZAS</p>
-			<p>SEJA UM PONTINHO DE LUZ VOCÊ TAMBÉM</p>
+		<section class="titulo">
+			<h2>
+				ACREDITAMOS NA FORÇA DA SOLIDARIEDADE E DO AMOR AO PRÓXIMO COMO MULTIPLICADORA DE GENTILIZAS</h2><br>
+			<h2>
+				SEJA UM PONTINHO DE LUZ VOCÊ TAMBÉM
+			</h2>
+			<div>
+				<img src="PL - Assets/home.png">	
+			</div>
+		</section>
+			<p id="#1">Somos uma grande família constituída por amigos, verdadeiros irmãos de alma e coração. Pessoas unidas por um ideal: fazer o bem sem olhar a quem.</p>
+			<p>O Pontinho de Luz foi fundado em julho de 2015 para promover ações de gentileza em busca de minimizar os impactos da desigualdade social. Nosso primeiro grupo de assistência aos necessitados surgiu na cidade de Niterói/RJ e alcançou maiores proporções com o passar do  tempo, conforme a participação crescente dos voluntários.</p>
+			<p>Juntos, já coletamos e distribuímos mais de 100 toneladas em doações de alimentos, roupas e cobertores, atendemos centenas de famílias e oferecemos suporte a pessoas em situação de rua. Não buscamos critérios restritivos para contribuir; apenas oferecemos ajuda conforme a necessidade de cada um.</p>
+			<p>Nossas atividades de assistência dependem das doações de amigos, familiares e empresas e acontecem conforme haja recursos disponíveis para tal. Assim, contamos com a solidariedade e a possibilidade de cada participante em contribuir para o Pontinho da Luz.</p>
+			<p>Ajude-nos a ajudar e ponha seu amor em movimento através da solidariedade.</p>
 		</section>
 		<section>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
+			<h1>REDE SOLIDARIEDADE</h1>
+			<div>
+				<img src="PL - Fotos/PL Futuro 2.jpeg" alt="Futuro2" title="">
+				<figcaption>PL Niterói, RJ</figcaption>
+			</div>
+			<div>
+				<img src="PL - Fotos/PL Futuro 3.jpeg" alt="Futuro3" title="">
+				<figcaption>PL São Gonçalo, RJ</figcaption>
+			</div>
+			<div>
+				<img src="PL - Fotos/PL Futuro.jpeg" alt="Futuro4" title="">
+				<figcaption>PL Parelheiros, SP</figcaption>
+			</div>
+			<div>
+				<img src="PL - Fotos/PL Futuro 4.jpeg" alt="Futuro5" title="">
+				<figcaption>PL Futuro, SP</figcaption>
+			</div>
+		</section>
+		<section>
+			<h1 id="#2">PROGRAMAS</h1>
+			<div>
+				<img src="PL - Assets/pg-kaleb.svg">
+				<h3>Programa Kaleb</h3>
+				<p>
+					Programa de assistência às gestantes e aos recém nascidos em situação de vulnerabilidade social. Nossos voluntários transformam enxovais novos e usados com amor e carinho para dar suporte aos que precisam. Aceitamos doações de roupinhas, sapatinhos, fraldas, pomadas anti-assadura, lenços umedecidos, mobiliário infantil etc.
+				</p>
+			</div>
+			<div>
+				<img src="PL - Assets/pg-irmadulce.svg">
+				<h3>Programa Irmã Dulce</h3>
+				<p>
+					Programa social de apoio à população em situação de rua. Oferecemos refeições, água mineral, roupas, cobertores e muito amor. Essa assistência só é possível quando recebemos doações ou apoio de pessoas, grupos e empresas. Juntos podemos fazer muito mais por aqueles que precisam de ajuda.
+				</p>
+			</div>
+			<div>
+				<img src="PL - Assets/pg-marly.svg">
+				<h3>Programa Marly</h3>
+				<p>
+					Iniciativa para assistência a idosos e visitas a casas de repouso para levar conforto, entretenimento e  alegria aos residentes.
+				</p>
+			</div>
+			<div>
+				<h3>Cestas Básicas</h3>
+				<img src="PL - Assets/pg-cestasbasicas.svg">
+				<p>
+					Entrega de cestas básicas para famílias em situação de vulnerabilidade social.
+				</p>
+			</div>
+		</section>
+<!-- 		<section>
+			<h1>DOAÇÕES</h1>
+		</section> -->
+		<section>
+			<h1>PARCEIROS</h1>
+			<div>
+				<img src="PL - Assets/logo-institutovoce.png">
+				<img src="PL - Assets/logo-precisaser.svg">
+			</div>
 		</section>
 	</main>
 </body>
