--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Pontinho de Luz</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="style.css">
-	<link href="Fontes/Raleway-Bold.ttf" rel="stylesheet">
+	<link rel="stylesheet" href="fonts/stylesheet.css">
 </head>
 <body>
 	<header>
@@ -23,66 +23,64 @@
 	<main>
 		<section class="titulo">
 			<h2>
-				ACREDITAMOS NA FORÇA DA SOLIDARIEDADE E DO AMOR AO PRÓXIMO COMO MULTIPLICADORA DE GENTILIZAS</h2><br>
-			<h2>
-				SEJA UM PONTINHO DE LUZ VOCÊ TAMBÉM
+				ACREDITAMOS NA FORÇA DA SOLIDARIEDADE E DO AMOR AO PRÓXIMO COMO MULTIPLICADORA DE GENTILIZAS
 			</h2>
-			<div>
-				<img src="PL - Assets/home.png">	
-			</div>
-		</section>
+			<h2>
+				SEJA UM iPONTINHO DE LUZ VOCÊ TAMBÉM
+			</h2>
 			<p id="#1">Somos uma grande família constituída por amigos, verdadeiros irmãos de alma e coração. Pessoas unidas por um ideal: fazer o bem sem olhar a quem.</p>
 			<p>O Pontinho de Luz foi fundado em julho de 2015 para promover ações de gentileza em busca de minimizar os impactos da desigualdade social. Nosso primeiro grupo de assistência aos necessitados surgiu na cidade de Niterói/RJ e alcançou maiores proporções com o passar do  tempo, conforme a participação crescente dos voluntários.</p>
 			<p>Juntos, já coletamos e distribuímos mais de 100 toneladas em doações de alimentos, roupas e cobertores, atendemos centenas de famílias e oferecemos suporte a pessoas em situação de rua. Não buscamos critérios restritivos para contribuir; apenas oferecemos ajuda conforme a necessidade de cada um.</p>
 			<p>Nossas atividades de assistência dependem das doações de amigos, familiares e empresas e acontecem conforme haja recursos disponíveis para tal. Assim, contamos com a solidariedade e a possibilidade de cada participante em contribuir para o Pontinho da Luz.</p>
 			<p>Ajude-nos a ajudar e ponha seu amor em movimento através da solidariedade.</p>
+			<img src="PL - Assets/flowers.svg">
 		</section>
 		<section>
-			<h1>REDE SOLIDARIEDADE</h1>
+			<h2 class="titulo1">REDE SOLIDARIEDADE</h2>
 			<div>
-				<img src="PL - Fotos/PL Futuro 2.jpeg" alt="Futuro2" title="">
-				<figcaption>PL Niterói, RJ</figcaption>
+				<img class="rede" src="PL - Fotos/PL Futuro 2.jpeg" alt="Futuro2" title="">
+				<figcaption class="texto1">PL Niterói, RJ</figcaption>
 			</div>
 			<div>
-				<img src="PL - Fotos/PL Futuro 3.jpeg" alt="Futuro3" title="">
-				<figcaption>PL São Gonçalo, RJ</figcaption>
+				<img class="rede" src="PL - Fotos/PL Futuro 3.jpeg" alt="Futuro3" title="">
+				<figcaption class="texto1">PL São Gonçalo, RJ</figcaption>
 			</div>
 			<div>
-				<img src="PL - Fotos/PL Futuro.jpeg" alt="Futuro4" title="">
-				<figcaption>PL Parelheiros, SP</figcaption>
+				<img class="rede" src="PL - Fotos/PL Futuro.jpeg" alt="Futuro4" title="">
+				<figcaption class="texto1">PL Parelheiros, SP</figcaption>
 			</div>
 			<div>
-				<img src="PL - Fotos/PL Futuro 4.jpeg" alt="Futuro5" title="">
-				<figcaption>PL Futuro, SP</figcaption>
+				<img class="rede" src="PL - Fotos/PL Futuro 4.jpeg" alt="Futuro5" title="">
+				<figcaption class="texto1">PL Futuro, SP</figcaption>
 			</div>
 		</section>
 		<section>
-			<h1 id="#2">PROGRAMAS</h1>
+			<h2 class="titulo1" id="#2">PROGRAMAS</h2>
 			<div>
-				<img src="PL - Assets/pg-kaleb.svg">
-				<h3>Programa Kaleb</h3>
-				<p>
+				<img class="img-prg1" src="PL - Assets/pg-kaleb.svg">
+				<h3 class="text-prg">Programa Kaleb</h3>
+				<p class="texto1">
 					Programa de assistência às gestantes e aos recém nascidos em situação de vulnerabilidade social. Nossos voluntários transformam enxovais novos e usados com amor e carinho para dar suporte aos que precisam. Aceitamos doações de roupinhas, sapatinhos, fraldas, pomadas anti-assadura, lenços umedecidos, mobiliário infantil etc.
 				</p>
 			</div>
 			<div>
-				<img src="PL - Assets/pg-irmadulce.svg">
-				<h3>Programa Irmã Dulce</h3>
-				<p>
+				<img class="img-prg2" src="PL - Assets/pg-irmadulce.svg">
+				<h3 class="text-prg">Programa Irmã Dulce</h3>
+				<p class="texto1">
 					Programa social de apoio à população em situação de rua. Oferecemos refeições, água mineral, roupas, cobertores e muito amor. Essa assistência só é possível quando recebemos doações ou apoio de pessoas, grupos e empresas. Juntos podemos fazer muito mais por aqueles que precisam de ajuda.
 				</p>
 			</div>
 			<div>
-				<img src="PL - Assets/pg-marly.svg">
-				<h3>Programa Marly</h3>
-				<p>
+				<img class="img-prg2" src="PL - Assets/pg-marly.svg">
+				<h3 class="text-prg">Programa Marly</h3>
+				<p class="texto1">
 					Iniciativa para assistência a idosos e visitas a casas de repouso para levar conforto, entretenimento e  alegria aos residentes.
 				</p>
 			</div>
 			<div>
-				<h3>Cestas Básicas</h3>
-				<img src="PL - Assets/pg-cestasbasicas.svg">
-				<p>
+				<h3 class="text-prg">Cestas Básicas</h3>
+				<img class="img-prg2" src="PL - Assets/pg-cestasbasicas.svg">
+				<p class="texto1">
 					Entrega de cestas básicas para famílias em situação de vulnerabilidade social.
 				</p>
 			</div>
@@ -91,12 +89,38 @@
 			<h1>DOAÇÕES</h1>
 		</section> -->
 		<section>
-			<h1>PARCEIROS</h1>
+			<h2 class="titulo1">PARCEIROS</h2>
 			<div>
-				<img src="PL - Assets/logo-institutovoce.png">
-				<img src="PL - Assets/logo-precisaser.svg">
+				<img class="pac1" src="PL - Assets/logo-institutovoce.png">
+				<img class="pac2" src="PL - Assets/logo-precisaser.svg">
 			</div>
 		</section>
 	</main>
+	<footer>
+		<h2 class="titulo1">ENTRE EM CONTATO, COLABORE E SEJA TAMBÉM UM PONTINHO DE LUZ</h2>
+		<div>
+			<img class="solzinho" src="PL - Assets/Sol.png">
+			<img class="solzinho" src="PL - Assets/Sol.png">
+			<img class="solzinho" src="PL - Assets/Sol.png">
+			<img class="solzinho" src="PL - Assets/Sol.png">
+		</div>
+		<div>
+			<img src="">
+			<p>
+				
+			</p>
+			<img src="">
+			<p>
+				
+			</p>
+			<p class="texto1">
+				Como chegar: partir do Terminal Roberto Silveira (ao lado das Barcas de Niterói), pegar o ônibus  537 para Itaipú da Viação Nossa Senhora do Amparo.
+			</p>
+		</div>
+		<div>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.147223862757!2d-42.98920438545669!3d-22.907939985011225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x998faecc7a6f65%3A0xd1c49a86f68e50dc!2sR.+Argemiro+Azevedo%2C+385+-+Rio+do+Ouro%2C+Niter%C3%B3i+-+RJ%2C+24330-170!5e0!3m2!1spt-BR!2sbr!4v1522955598896" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+			<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSejaUmPontinhoDeLuz%2F&tabs=timeline&width=500&height=300&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+		</div>
+	</footer>
 </body>
 </html>
