--- a/index.html
+++ b/index.html
@@ -1,129 +1,121 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-	<title>Pontinho de Luz</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="fonts/stylesheet.css">
-</head>
-<body>
-	<header>
-		<img class="imgheader" src="PL - Assets/logo-pontinhodeluz.svg">
-		<nav>
-			<ul class="nav"> 
-		    	<a href="#1" class="li1"><li>Inicio</li></a> 
-		    	<a href="#2" class="li2"><li>Sobre</li></a>
-		    	<a href="#3" class="li2"><li>Programas</li></a>
-		    	<a href="#4" class="li2"><li>Campanhas</li></a> 
-		    	<a href="#5" class="li2"><li>Faça Parte</li></a>
-		    	<a href="#6" class="li2"><li>Contato</li></a>
-	    	<ul> 
-		</nav>
-	</header>
-	<main>
-		<section class="titulo">
-			<h2>
-				ACREDITAMOS NA FORÇA DA SOLIDARIEDADE E DO AMOR AO PRÓXIMO COMO MULTIPLICADORA DE
-				GENTILIZAS
-			</h2>
-			<h2>
-				SEJA UM PONTINHO DE LUZ VOCÊ TAMBÉM
-			</h2>
-			<div class="texto1">
-				<p id="#1">Somos uma grande família constituída por amigos, verdadeiros irmãos de alma e coração. Pessoas unidas por um ideal: fazer o bem sem olhar a quem.</p>
-				<p>O Pontinho de Luz foi fundado em julho de 2015 para promover ações de gentileza em busca de minimizar os impactos da desigualdade social. Nosso primeiro grupo de assistência aos necessitados surgiu na cidade de Niterói/RJ e alcançou maiores proporções com o passar do  tempo, conforme a participação crescente dos voluntários.</p>
-				<p>Juntos, já coletamos e distribuímos mais de 100 toneladas em doações de alimentos, roupas e cobertores, atendemos centenas de famílias e oferecemos suporte a pessoas em situação de rua. Não buscamos critérios restritivos para contribuir; apenas oferecemos ajuda conforme a necessidade de cada um.</p>
-				<p>Nossas atividades de assistência dependem das doações de amigos, familiares e empresas e acontecem conforme haja recursos disponíveis para tal. Assim, contamos com a solidariedade e a possibilidade de cada participante em contribuir para o Pontinho da Luz.</p>
-				<p>Ajude-nos a ajudar e ponha seu amor em movimento através da solidariedade.</p>
-			</div>
-			<img class="flores" src="PL - Assets/flowers.svg">
-		</section>
-		<section>
-			<h2 class="titulo1">REDE SOLIDARIEDADE</h2>
-			<div>
-				<img class="rede" src="PL - Fotos/PL Futuro 2.jpeg" alt="Futuro2" title="">
-				<figcaption class="texto1">PL Niterói, RJ</figcaption>
-			</div>
-			<div>
-				<img class="rede" src="PL - Fotos/PL Futuro 3.jpeg" alt="Futuro3" title="">
-				<figcaption class="texto1">PL São Gonçalo, RJ</figcaption>
-			</div>
-			<div>
-				<img class="rede" src="PL - Fotos/PL Futuro.jpeg" alt="Futuro4" title="">
-				<figcaption class="texto1">PL Parelheiros, SP</figcaption>
-			</div>
-			<div>
-				<img class="rede" src="PL - Fotos/PL Futuro 4.jpeg" alt="Futuro5" title="">
-				<figcaption class="texto1">PL Futuro, SP</figcaption>
-			</div>
-		</section>
-		<section>
-			<h2 class="titulo1" id="#2">PROGRAMAS</h2>
-			<div>
-				<img class="img-prg1" src="PL - Assets/pg-kaleb.svg">
+	<head>
+		<title>Pontinho de Luz</title>
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="fonts/stylesheet.css">
+	</head>
+	<body>
+		<header>
+			<img class="imgheader" src="PL - Assets/logo-pontinhodeluz.svg">
+			<nav class="nav">
+			    <a href="#ancora1" class="li1">Inicio</a> 
+			    <a href="#ancora2" class="li1">Sobre</a>
+			    <a href="#ancora3" class="li1">Programas</a>
+			    <a href="#ancora4" class="li1">Campanhas</a> 
+			    <a href="#ancora5" class="li1">Faça Parte</a>
+			    <a href="#ancora6" class="li1">Contato</a>
+			</nav>
+		</header>
+		<main>
+			<section class="titulo" id="">
+				<h2>
+					ACREDITAMOS NA FORÇA DA SOLIDARIEDADE E DO AMOR AO PRÓXIMO COMO MULTIPLICADORA DE
+					GENTILIZAS
+				</h2>
+				<h2>
+					SEJA UM PONTINHO DE LUZ VOCÊ TAMBÉM!
+				</h2>
+				<div class="sobre">
+					<p>Somos uma grande família constituída por amigos, verdadeiros irmãos de alma e coração. Pessoas unidas por um ideal: fazer o bem sem olhar a quem.</p>
+					<p>O Pontinho de Luz foi fundado em julho de 2015 para promover ações de gentileza em busca de minimizar os impactos da desigualdade social. Nosso primeiro grupo de assistência aos necessitados surgiu na cidade de Niterói/RJ e alcançou maiores proporções com o passar do  tempo, conforme a participação crescente dos voluntários.</p>
+					<p>Juntos, já coletamos e distribuímos mais de 100 toneladas em doações de alimentos, roupas e cobertores, atendemos centenas de famílias e oferecemos suporte a pessoas em situação de rua. Não buscamos critérios restritivos para contribuir; apenas oferecemos ajuda conforme a necessidade de cada um.</p>
+					<p>Nossas atividades de assistência dependem das doações de amigos, familiares e empresas e acontecem conforme haja recursos disponíveis para tal. Assim, contamos com a solidariedade e a possibilidade de cada participante em contribuir para o Pontinho da Luz.</p>
+					<p>Ajude-nos a ajudar e ponha seu amor em movimento através da solidariedade.</p>
+				</div>
+			</section>
+			<section class="redes">
+				<h2 class="h2redes">REDE SOLIDARIEDADE</h2>
+				<figure>
+					<img class="rede" src="PL - Fotos/PL Futuro 2.jpeg" alt="Futuro2" title="">
+					<figcaption class="figcaption">PL Niterói, RJ</figcaption>				
+				</figure>	
+				<figure>
+					<img class="rede" src="PL - Fotos/PL Futuro 3.jpeg" alt="Futuro3" title="">
+					<figcaption class="figcaption">PL Niterói, RJ</figcaption>
+				</figure>	
+				<figure>
+					<img class="rede" src="PL - Fotos/PL Futuro.jpeg" alt="Futuro4" title="">
+					<figcaption class="figcaption">PL Niterói, RJ</figcaption>
+				</figure>	
+				<figure>
+					<img class="rede" src="PL - Fotos/PL Futuro 4.jpeg" alt="Futuro5" title="">
+					<figcaption class="figcaption">PL Niterói, RJ</figcaption>
+				</figure>	
+			</section>
+			<section class="programas">
+				<h2 class="h2-programas" id="#2">PROGRAMAS</h2> 
+				<div class="prg1">
+					<img class="img-prg1" src="PL - Assets/pg-kaleb.svg">
+				</div>
 				<h3 class="text-prg">Programa Kaleb</h3>
-				<p class="texto1">
+				<p class="pprg">
 					Programa de assistência às gestantes e aos recém nascidos em situação de vulnerabilidade social. Nossos voluntários transformam enxovais novos e usados com amor e carinho para dar suporte aos que precisam. Aceitamos doações de roupinhas, sapatinhos, fraldas, pomadas anti-assadura, lenços umedecidos, mobiliário infantil etc.
 				</p>
-			</div>
-			<div>
-				<img class="img-prg2" src="PL - Assets/pg-irmadulce.svg">
+				<div class="prg1">
+					<img class="img-prg1" src="PL - Assets/pg-irmadulce.svg">
+				</div>
 				<h3 class="text-prg">Programa Irmã Dulce</h3>
-				<p class="texto1">
+				<p class="pprg">
 					Programa social de apoio à população em situação de rua. Oferecemos refeições, água mineral, roupas, cobertores e muito amor. Essa assistência só é possível quando recebemos doações ou apoio de pessoas, grupos e empresas. Juntos podemos fazer muito mais por aqueles que precisam de ajuda.
 				</p>
-			</div>
-			<div>
-				<img class="img-prg2" src="PL - Assets/pg-marly.svg">
+				<div class="prg1">
+					<img class="img-prg1" src="PL - Assets/pg-marly.svg">
+				</div>
 				<h3 class="text-prg">Programa Marly</h3>
-				<p class="texto1">
+				<p class="pprg">
 					Iniciativa para assistência a idosos e visitas a casas de repouso para levar conforto, entretenimento e  alegria aos residentes.
 				</p>
-			</div>
-			<div>
+				<div class="prg1">
+					<img class="img-prg1" src="PL - Assets/pg-cestasbasicas.svg">
+				</div>
 				<h3 class="text-prg">Cestas Básicas</h3>
-				<img class="img-prg2" src="PL - Assets/pg-cestasbasicas.svg">
-				<p class="texto1">
+				<p class="pprg">
 					Entrega de cestas básicas para famílias em situação de vulnerabilidade social.
 				</p>
-			</div>
-		</section>
-<!-- 		<section>
-			<h1>DOAÇÕES</h1>
-		</section> -->
-		<section>
-			<h2 class="titulo1">PARCEIROS</h2>
+			</section>
+			<section class="parceiros">
+				<h2 class="h2-parceiros">PARCEIROS</h2> 
+				<div>
+					<img class="pac1" src="PL - Assets/logo-institutovoce.png">
+					<img class="pac2" src="PL - Assets/logo-precisaser.svg">
+				</div>
+			</section>
+		</main>
+		<footer>
+			<section class="contatos">
+			<h2 class="h2-contatos">ENTRE EM CONTATO, COLABORE E SEJA TAMBÉM UM PONTINHO DE LUZ</h2> 
 			<div>
-				<img class="pac1" src="PL - Assets/logo-institutovoce.png">
-				<img class="pac2" src="PL - Assets/logo-precisaser.svg">
+				<img class="solzinho" src="PL - Assets/Sol.png">
+				<img class="solzinho" src="PL - Assets/Sol.png">
+				<img class="solzinho" src="PL - Assets/Sol.png">
+				<img class="solzinho" src="PL - Assets/Sol.png">
 			</div>
-		</section>
-	</main>
-	<footer>
-		<h2 class="titulo1">ENTRE EM CONTATO, COLABORE E SEJA TAMBÉM UM PONTINHO DE LUZ</h2>
-		<div>
-			<img class="solzinho" src="PL - Assets/Sol.png">
-			<img class="solzinho" src="PL - Assets/Sol.png">
-			<img class="solzinho" src="PL - Assets/Sol.png">
-			<img class="solzinho" src="PL - Assets/Sol.png">
-		</div>
-		<div>
-			<img src="">
-			<p>
-				
-			</p>
-			<img src="">
-			<p>
-				
-			</p>
-			<p class="texto1">
-				Como chegar: partir do Terminal Roberto Silveira (ao lado das Barcas de Niterói), pegar o ônibus  537 para Itaipú da Viação Nossa Senhora do Amparo.
-			</p>
-		</div>
-		<div>
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.147223862757!2d-42.98920438545669!3d-22.907939985011225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x998faecc7a6f65%3A0xd1c49a86f68e50dc!2sR.+Argemiro+Azevedo%2C+385+-+Rio+do+Ouro%2C+Niter%C3%B3i+-+RJ%2C+24330-170!5e0!3m2!1spt-BR!2sbr!4v1522955598896" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-			<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSejaUmPontinhoDeLuz%2F&tabs=timeline&width=500&height=300&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-		</div>
-	</footer>
-</body>
+			<div>
+				<img class="icons" src="PL - Assets/ft-phone.svg">
+				<p>(21)91234-5678</p>
+				<img class="icons" src="PL - Assets/ft-mail.svg">
+				<p>sejaumpontinhodeluz@gmail.com</p>
+				<p class="texto1">
+					Como chegar: partir do Terminal Roberto Silveira (ao lado das Barcas de Niterói), pegar o ônibus  537 para Itaipú da Viação Nossa Senhora do Amparo.
+				</p>
+			</div>
+			<div>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.1472238627553!2d-42.98920438576625!3d-22.90793998501129!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x998faecc7a6f65%3A0xd1c49a86f68e50dc!2sR.+Argemiro+Azevedo%2C+385+-+Rio+do+Ouro%2C+Niter%C3%B3i+-+RJ%2C+24330-170!5e0!3m2!1spt-BR!2sbr!4v1523192939128" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+				<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSejaUmPontinhoDeLuz%2F&tabs=timeline&width=500&height=300&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+			</div>
+			</section>
+		</footer>
+	</body>
 </html>
