--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 	</head>
 	<body>
 		<header>
-			<img class="imgheader" src="PL - Assets/logo-pontinhodeluz.svg">
+			<img class="logo" src="PL - Assets/logo-pontinhodeluz.svg">
 			<nav class="nav">
-			    <a href="#ancora1" class="li1">Inicio</a> 
-			    <a href="#ancora2" class="li1">Sobre</a>
-			    <a href="#ancora3" class="li1">Programas</a>
-			    <a href="#ancora4" class="li1">Campanhas</a> 
-			    <a href="#ancora5" class="li1">Faça Parte</a>
-			    <a href="#ancora6" class="li1">Contato</a>
+			    <a href="#ancora1" class="a">Inicio</a> 
+			    <a href="#ancora2" class="a">Sobre</a>
+ 				<a href="#ancora3" class="a">Programas</a>
+			    <a href="#ancora4" class="a">Campanhas</a> 
+			    <a href="#ancora5" class="a">Faça Parte</a>
+			    <a href="#ancora6" class="a">Contato</a>
 			</nav>
 		</header>
 		<main>
-			<section class="titulo" id="">
+			<section class="inicio" id="ancora1">
 				<h2>
 					ACREDITAMOS NA FORÇA DA SOLIDARIEDADE E DO AMOR AO PRÓXIMO COMO MULTIPLICADORA DE
 					GENTILIZAS
@@ -35,8 +35,8 @@
 					<p>Ajude-nos a ajudar e ponha seu amor em movimento através da solidariedade.</p>
 				</div>
 			</section>
-			<section class="redes">
-				<h2 class="h2redes">REDE SOLIDARIEDADE</h2>
+			<section class="redes" id="ancora2">
+				<h2 class="h2-redes">REDE SOLIDARIEDADE</h2>
 				<figure>
 					<img class="rede" src="PL - Fotos/PL Futuro 2.jpeg" alt="Futuro2" title="">
 					<figcaption class="figcaption">PL Niterói, RJ</figcaption>				
@@ -56,66 +56,69 @@
 			</section>
 			<section class="programas">
 				<h2 class="h2-programas" id="#2">PROGRAMAS</h2> 
-				<div class="prg1">
-					<img class="img-prg1" src="PL - Assets/pg-kaleb.svg">
+				<div class="div-programas">
+					<img class="imagem-programas" src="PL - Assets/pg-kaleb.svg">
 				</div>
-				<h3 class="text-prg">Programa Kaleb</h3>
-				<p class="pprg">
+				<h3 class="text-programas">Programa Kaleb</h3>
+				<p class="p-programas">
 					Programa de assistência às gestantes e aos recém nascidos em situação de vulnerabilidade social. Nossos voluntários transformam enxovais novos e usados com amor e carinho para dar suporte aos que precisam. Aceitamos doações de roupinhas, sapatinhos, fraldas, pomadas anti-assadura, lenços umedecidos, mobiliário infantil etc.
 				</p>
-				<div class="prg1">
-					<img class="img-prg1" src="PL - Assets/pg-irmadulce.svg">
+				<div class="div-programas">
+					<img class="imagem-programas" src="PL - Assets/pg-irmadulce.svg">
 				</div>
-				<h3 class="text-prg">Programa Irmã Dulce</h3>
-				<p class="pprg">
+				<h3 class="text-programas">Programa Irmã Dulce</h3>
+				<p class="p-programas">
 					Programa social de apoio à população em situação de rua. Oferecemos refeições, água mineral, roupas, cobertores e muito amor. Essa assistência só é possível quando recebemos doações ou apoio de pessoas, grupos e empresas. Juntos podemos fazer muito mais por aqueles que precisam de ajuda.
 				</p>
-				<div class="prg1">
-					<img class="img-prg1" src="PL - Assets/pg-marly.svg">
+				<div class="div-programas">
+					<img class="imagem-programas" src="PL - Assets/pg-marly.svg">
 				</div>
-				<h3 class="text-prg">Programa Marly</h3>
-				<p class="pprg">
+				<h3 class="text-programas">Programa Marly</h3>
+				<p class="p-programas">
 					Iniciativa para assistência a idosos e visitas a casas de repouso para levar conforto, entretenimento e  alegria aos residentes.
 				</p>
-				<div class="prg1">
-					<img class="img-prg1" src="PL - Assets/pg-cestasbasicas.svg">
+				<div class="div-programas">
+					<img class="imagem-programas" src="PL - Assets/pg-cestasbasicas.svg">
 				</div>
-				<h3 class="text-prg">Cestas Básicas</h3>
-				<p class="pprg">
+				<h3 class="text-programas">Cestas Básicas</h3>
+				<p class="p-programas">
 					Entrega de cestas básicas para famílias em situação de vulnerabilidade social.
 				</p>
 			</section>
 			<section class="parceiros">
 				<h2 class="h2-parceiros">PARCEIROS</h2> 
-				<div>
-					<img class="pac1" src="PL - Assets/logo-institutovoce.png">
-					<img class="pac2" src="PL - Assets/logo-precisaser.svg">
-				</div>
+					<img class="parceiro1" src="PL - Assets/logo-institutovoce.png">
+					<img class="parceiro2" src="PL - Assets/logo-precisaser.svg">
 			</section>
 		</main>
 		<footer>
-			<section class="contatos">
-			<h2 class="h2-contatos">ENTRE EM CONTATO, COLABORE E SEJA TAMBÉM UM PONTINHO DE LUZ</h2> 
-			<div>
-				<img class="solzinho" src="PL - Assets/Sol.png">
-				<img class="solzinho" src="PL - Assets/Sol.png">
-				<img class="solzinho" src="PL - Assets/Sol.png">
-				<img class="solzinho" src="PL - Assets/Sol.png">
-			</div>
-			<div>
-				<img class="icons" src="PL - Assets/ft-phone.svg">
-				<p>(21)91234-5678</p>
-				<img class="icons" src="PL - Assets/ft-mail.svg">
-				<p>sejaumpontinhodeluz@gmail.com</p>
-				<p class="texto1">
+			<!-- <section class="contato2"> -->
+			<!-- </section> -->
+					<h2 class="h2-contatos">ENTRE EM CONTATO, COLABORE E SEJA TAMBÉM UM PONTINHO DE LUZ</h2>
+					<div>
+						<img class="solzinho" src="PL - Assets/Sol.png">
+						<img class="solzinho" src="PL - Assets/Sol.png">
+						<img class="solzinho" src="PL - Assets/Sol.png">
+						<img class="solzinho" src="PL - Assets/Sol.png">
+					</div>
+			<section class="contato2">
+				<div class="icons-contato">
+					<img class="icons" src="PL - Assets/ft-phone.svg">
+					<p class="p-contatos">(21)91234-5678</p>
+				</div>
+				<div class="icons-contato">
+					<img class="icons" src="PL - Assets/ft-mail.svg">
+					<p class="p-contatos">sejaumpontinhodeluz@gmail.com</p>
+				<div>
+				<p class="p-contatos2">
 					Como chegar: partir do Terminal Roberto Silveira (ao lado das Barcas de Niterói), pegar o ônibus  537 para Itaipú da Viação Nossa Senhora do Amparo.
 				</p>
-			</div>
-			<div>
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.1472238627553!2d-42.98920438576625!3d-22.90793998501129!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x998faecc7a6f65%3A0xd1c49a86f68e50dc!2sR.+Argemiro+Azevedo%2C+385+-+Rio+do+Ouro%2C+Niter%C3%B3i+-+RJ%2C+24330-170!5e0!3m2!1spt-BR!2sbr!4v1523192939128" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
-				<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSejaUmPontinhoDeLuz%2F&tabs=timeline&width=500&height=300&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-			</div>
+				</div>
 			</section>
+				<div class="iframe">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.1472238627553!2d-42.98920438576625!3d-22.90793998501129!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x998faecc7a6f65%3A0xd1c49a86f68e50dc!2sR.+Argemiro+Azevedo%2C+385+-+Rio+do+Ouro%2C+Niter%C3%B3i+-+RJ%2C+24330-170!5e0!3m2!1spt-BR!2sbr!4v1523192939128" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+					<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSejaUmPontinhoDeLuz%2F&tabs=timeline&width=500&height=300&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+				</div>
 		</footer>
 	</body>
 </html>
