--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		</header>
 		<main>
 			<section class="inicio" id="ancora1">
+				<img class="logo2" src="PL - Assets/logo-pontinhodeluz.svg">
 				<h2>
 					ACREDITAMOS NA FORÇA DA SOLIDARIEDADE E DO AMOR AO PRÓXIMO COMO MULTIPLICADORA DE
 					GENTILIZAS
@@ -92,33 +93,31 @@
 			</section>
 		</main>
 		<footer>
-			<!-- <section class="contato2"> -->
-			<!-- </section> -->
+			<section class="contato1">
+				<div class="div-contato">
 					<h2 class="h2-contatos">ENTRE EM CONTATO, COLABORE E SEJA TAMBÉM UM PONTINHO DE LUZ</h2>
-					<div>
-						<img class="solzinho" src="PL - Assets/Sol.png">
-						<img class="solzinho" src="PL - Assets/Sol.png">
-						<img class="solzinho" src="PL - Assets/Sol.png">
-						<img class="solzinho" src="PL - Assets/Sol.png">
-					</div>
-			<section class="contato2">
-				<div class="icons-contato">
-					<img class="icons" src="PL - Assets/ft-phone.svg">
-					<p class="p-contatos">(21)91234-5678</p>
-				</div>
-				<div class="icons-contato">
-					<img class="icons" src="PL - Assets/ft-mail.svg">
-					<p class="p-contatos">sejaumpontinhodeluz@gmail.com</p>
-				<div>
-				<p class="p-contatos2">
-					Como chegar: partir do Terminal Roberto Silveira (ao lado das Barcas de Niterói), pegar o ônibus  537 para Itaipú da Viação Nossa Senhora do Amparo.
-				</p>
+					<img class="solzinho" src="PL - Assets/sun-emoticons.svg">
 				</div>
 			</section>
-				<div class="iframe">
+			<section class="contato2">
+				<div class="contato2__div">
+					<div class="icons-contato">
+						<img class="icons" src="PL - Assets/ft-phone.svg">
+						<p class="p-contatos">(21)91234-5678</p>
+					</div>
+					<div class="icons-contato">
+						<img class="icons" src="PL - Assets/ft-mail.svg">
+						<p class="p-contatos">sejaumpontinhodeluz@gmail.com</p>
+					</div>
+					<div>
+						<p class="p-contatos2">
+							Como chegar: partir do Terminal Roberto Silveira (ao lado das Barcas de Niterói), pegar o ônibus  537 para Itaipú da Viação Nossa Senhora do Amparo.
+						</p>
+					</div>
+				</div>
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.1472238627553!2d-42.98920438576625!3d-22.90793998501129!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x998faecc7a6f65%3A0xd1c49a86f68e50dc!2sR.+Argemiro+Azevedo%2C+385+-+Rio+do+Ouro%2C+Niter%C3%B3i+-+RJ%2C+24330-170!5e0!3m2!1spt-BR!2sbr!4v1523192939128" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
 					<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSejaUmPontinhoDeLuz%2F&tabs=timeline&width=500&height=300&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-				</div>
+			</section>
 		</footer>
 	</body>
 </html>
