--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 						<img class="icons" src="PL - Assets/ft-mail.svg">
 						<p class="p-contatos">sejaumpontinhodeluz@gmail.com</p>
 					</div>
-					<div>
-						<p class="p-contatos2">
+					<div class="p-contatos2">
+						<p>
 							Como chegar: partir do Terminal Roberto Silveira (ao lado das Barcas de Niterói), pegar o ônibus  537 para Itaipú da Viação Nossa Senhora do Amparo.
 						</p>
 					</div>
