Add footer about developer

--- a/index.html
+++ b/index.html
@@ -1,124 +1,127 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<title>Pontinho de Luz</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="style.css">
-		<link rel="stylesheet" href="fonts/stylesheet.css">
-	</head>
-	<body>
-		<header>
-			<img class="logo" src="PL - Assets/logo-pontinhodeluz.svg" alt="logo do pontinho de luz números 1">
-			<nav class="nav">
-			    <a href="#ancora1" class="a">Inicio</a> 
-			    <a href="#ancora2" class="a">Sobre</a>
- 				<a href="#ancora3" class="a">Programas</a>
-			    <a href="#ancora4" class="a">Campanhas</a> 
-			    <a href="#ancora5" class="a">Faça Parte</a>
-			    <a href="#ancora6" class="a">Contato</a>
-			</nav>
-		</header>
-		<main>
-			<section class="inicio" id="ancora1">
-				<img class="logo2" src="PL - Assets/logo-pontinhodeluz.svg" alt="logo pontinho de luz número 2">
-				<h2>
-					ACREDITAMOS NA FORÇA DA SOLIDARIEDADE E DO AMOR AO PRÓXIMO COMO MULTIPLICADORA DE
-					GENTILIZAS
-				</h2>
-				<h2>
-					SEJA UM PONTINHO DE LUZ VOCÊ TAMBÉM!
-				</h2>
-				<div class="sobre" id="ancora2">
-					<p>Somos uma grande família constituída por amigos, verdadeiros irmãos de alma e coração. Pessoas unidas por um ideal: fazer o bem sem olhar a quem.</p>
-					<p>O Pontinho de Luz foi fundado em julho de 2015 para promover ações de gentileza em busca de minimizar os impactos da desigualdade social. Nosso primeiro grupo de assistência aos necessitados surgiu na cidade de Niterói/RJ e alcançou maiores proporções com o passar do  tempo, conforme a participação crescente dos voluntários.</p>
-					<p>Juntos, já coletamos e distribuímos mais de 100 toneladas em doações de alimentos, roupas e cobertores, atendemos centenas de famílias e oferecemos suporte a pessoas em situação de rua. Não buscamos critérios restritivos para contribuir; apenas oferecemos ajuda conforme a necessidade de cada um.</p>
-					<p>Nossas atividades de assistência dependem das doações de amigos, familiares e empresas e acontecem conforme haja recursos disponíveis para tal. Assim, contamos com a solidariedade e a possibilidade de cada participante em contribuir para o Pontinho da Luz.</p>
-					<p>Ajude-nos a ajudar e ponha seu amor em movimento através da solidariedade.</p>
+<head>
+	<title>Pontinho de Luz</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="fonts/stylesheet.css">
+</head>
+<body>
+	<header>
+		<img class="logo" src="PL - Assets/logo-pontinhodeluz.svg" alt="logo do pontinho de luz números 1">
+		<nav class="nav">
+		    <a href="#ancora1" class="a">Inicio</a> 
+		    <a href="#ancora2" class="a">Sobre</a>
+				<a href="#ancora3" class="a">Programas</a>
+		    <a href="#ancora4" class="a">Campanhas</a> 
+		    <a href="#ancora5" class="a">Faça Parte</a>
+		    <a href="#ancora6" class="a">Contato</a>
+		</nav>
+	</header>
+	<main>
+		<section class="inicio" id="ancora1">
+			<img class="logo2" src="PL - Assets/logo-pontinhodeluz.svg" alt="logo pontinho de luz número 2">
+			<h2>
+				ACREDITAMOS NA FORÇA DA SOLIDARIEDADE E DO AMOR AO PRÓXIMO COMO MULTIPLICADORA DE
+				GENTILIZAS
+			</h2>
+			<h2>
+				SEJA UM PONTINHO DE LUZ VOCÊ TAMBÉM!
+			</h2>
+			<div class="sobre" id="ancora2">
+				<p>Somos uma grande família constituída por amigos, verdadeiros irmãos de alma e coração. Pessoas unidas por um ideal: fazer o bem sem olhar a quem.</p>
+				<p>O Pontinho de Luz foi fundado em julho de 2015 para promover ações de gentileza em busca de minimizar os impactos da desigualdade social. Nosso primeiro grupo de assistência aos necessitados surgiu na cidade de Niterói/RJ e alcançou maiores proporções com o passar do  tempo, conforme a participação crescente dos voluntários.</p>
+				<p>Juntos, já coletamos e distribuímos mais de 100 toneladas em doações de alimentos, roupas e cobertores, atendemos centenas de famílias e oferecemos suporte a pessoas em situação de rua. Não buscamos critérios restritivos para contribuir; apenas oferecemos ajuda conforme a necessidade de cada um.</p>
+				<p>Nossas atividades de assistência dependem das doações de amigos, familiares e empresas e acontecem conforme haja recursos disponíveis para tal. Assim, contamos com a solidariedade e a possibilidade de cada participante em contribuir para o Pontinho da Luz.</p>
+				<p>Ajude-nos a ajudar e ponha seu amor em movimento através da solidariedade.</p>
+			</div>
+		</section>
+		<section class="redes">
+			<h2 class="h2-redes">REDE SOLIDARIEDADE</h2>
+			<figure>
+				<img class="rede" src="PL - Fotos/PL Futuro 2.jpeg" alt="Futuro2" >
+				<figcaption class="figcaption">PL Niterói, RJ</figcaption>				
+			</figure>	
+			<figure>
+				<img class="rede" src="PL - Fotos/PL Futuro 3.jpeg" alt="Futuro3">
+				<figcaption class="figcaption">PL Niterói, RJ</figcaption>
+			</figure>	
+			<figure>
+				<img class="rede" src="PL - Fotos/PL Futuro.jpeg" alt="Futuro4">
+				<figcaption class="figcaption">PL Niterói, RJ</figcaption>
+			</figure>	
+			<figure>
+				<img class="rede" src="PL - Fotos/PL Futuro 4.jpeg" alt="Futuro5">
+				<figcaption class="figcaption">PL Niterói, RJ</figcaption>
+			</figure>	
+		</section>
+		<section class="programas" id="ancora3">
+			<h2 class="h2-programas">PROGRAMAS</h2> 
+			<div class="div-programas">
+				<img class="imagem-programas" src="PL - Assets/pg-kaleb.svg" alt="pintinho na casca do ovo">
+			</div>
+			<h3 class="text-programas">Programa Kaleb</h3>
+			<p class="p-programas" id="ancora4">
+				Programa de assistência às gestantes e aos recém nascidos em situação de vulnerabilidade social. Nossos voluntários transformam enxovais novos e usados com amor e carinho para dar suporte aos que precisam. Aceitamos doações de roupinhas, sapatinhos, fraldas, pomadas anti-assadura, lenços umedecidos, mobiliário infantil etc.
+			</p>
+			<div class="div-programas">
+				<img class="imagem-programas" src="PL - Assets/pg-irmadulce.svg" alt="circulo azul com duas mãos extendidas">
+			</div>
+			<h3 class="text-programas">Programa Irmã Dulce</h3>
+			<p class="p-programas">
+				Programa social de apoio à população em situação de rua. Oferecemos refeições, água mineral, roupas, cobertores e muito amor. Essa assistência só é possível quando recebemos doações ou apoio de pessoas, grupos e empresas. Juntos podemos fazer muito mais por aqueles que precisam de ajuda.
+			</p>
+			<div class="div-programas">
+				<img class="imagem-programas" src="PL - Assets/pg-marly.svg" alt="casa rosa e laranja">
+			</div>
+			<h3 class="text-programas">Programa Marly</h3>
+			<p class="p-programas">
+				Iniciativa para assistência a idosos e visitas a casas de repouso para levar conforto, entretenimento e  alegria aos residentes.
+			</p>
+			<div class="div-programas">
+				<img class="imagem-programas" src="PL - Assets/pg-cestasbasicas.svg" alt="cestas básicas">
+			</div>
+			<h3 class="text-programas">Cestas Básicas</h3>
+			<p class="p-programas">
+				Entrega de cestas básicas para famílias em situação de vulnerabilidade social.
+			</p>
+		</section>
+		<section class="parceiros" id="ancora5">
+			<h2 class="h2-parceiros">PARCEIROS</h2> 
+			<img class="parceiro1" src="PL - Assets/logo-institutovoce.png" alt="instituto você">
+			<img class="parceiro2" src="PL - Assets/logo-precisaser.svg" alt="instituto precisaser">
+		</section>
+	</main>
+	<footer>
+		<section class="contato1" id="ancora6">
+			<div class="div-contato">
+				<h2 class="h2-contatos">ENTRE EM CONTATO, COLABORE E SEJA TAMBÉM UM PONTINHO DE LUZ</h2>
+				<img class="solzinho" src="PL - Assets/sun-emoticons.svg" alt="um conjunto de 5 sóis com diferentes faces">
+			</div>
+		</section>
+		<section class="contato2">
+			<div class="contato2__div">
+				<div class="icons-contato">
+					<img class="icons" src="PL - Assets/ft-phone.svg" alt="imagem de um telefone">
+					<p class="p-contatos">(21)91234-5678</p>
 				</div>
-			</section>
-			<section class="redes">
-				<h2 class="h2-redes">REDE SOLIDARIEDADE</h2>
-				<figure>
-					<img class="rede" src="PL - Fotos/PL Futuro 2.jpeg" alt="Futuro2" >
-					<figcaption class="figcaption">PL Niterói, RJ</figcaption>				
-				</figure>	
-				<figure>
-					<img class="rede" src="PL - Fotos/PL Futuro 3.jpeg" alt="Futuro3">
-					<figcaption class="figcaption">PL Niterói, RJ</figcaption>
-				</figure>	
-				<figure>
-					<img class="rede" src="PL - Fotos/PL Futuro.jpeg" alt="Futuro4">
-					<figcaption class="figcaption">PL Niterói, RJ</figcaption>
-				</figure>	
-				<figure>
-					<img class="rede" src="PL - Fotos/PL Futuro 4.jpeg" alt="Futuro5">
-					<figcaption class="figcaption">PL Niterói, RJ</figcaption>
-				</figure>	
-			</section>
-			<section class="programas" id="ancora3">
-				<h2 class="h2-programas">PROGRAMAS</h2> 
-				<div class="div-programas">
-					<img class="imagem-programas" src="PL - Assets/pg-kaleb.svg" alt="pintinho na casca do ovo">
+				<div class="icons-contato">
+					<img class="icons" src="PL - Assets/ft-mail.svg" alt="imagem de email">
+					<p class="p-contatos">sejaumpontinhodeluz@gmail.com</p>
 				</div>
-				<h3 class="text-programas">Programa Kaleb</h3>
-				<p class="p-programas" id="ancora4">
-					Programa de assistência às gestantes e aos recém nascidos em situação de vulnerabilidade social. Nossos voluntários transformam enxovais novos e usados com amor e carinho para dar suporte aos que precisam. Aceitamos doações de roupinhas, sapatinhos, fraldas, pomadas anti-assadura, lenços umedecidos, mobiliário infantil etc.
-				</p>
-				<div class="div-programas">
-					<img class="imagem-programas" src="PL - Assets/pg-irmadulce.svg" alt="circulo azul com duas mãos extendidas">
+				<div class="p-contatos2">
+					<p>
+						Como chegar: partir do Terminal Roberto Silveira (ao lado das Barcas de Niterói), pegar o ônibus  537 para Itaipú da Viação Nossa Senhora do Amparo.
+					</p>
 				</div>
-				<h3 class="text-programas">Programa Irmã Dulce</h3>
-				<p class="p-programas">
-					Programa social de apoio à população em situação de rua. Oferecemos refeições, água mineral, roupas, cobertores e muito amor. Essa assistência só é possível quando recebemos doações ou apoio de pessoas, grupos e empresas. Juntos podemos fazer muito mais por aqueles que precisam de ajuda.
-				</p>
-				<div class="div-programas">
-					<img class="imagem-programas" src="PL - Assets/pg-marly.svg" alt="casa rosa e laranja">
-				</div>
-				<h3 class="text-programas">Programa Marly</h3>
-				<p class="p-programas">
-					Iniciativa para assistência a idosos e visitas a casas de repouso para levar conforto, entretenimento e  alegria aos residentes.
-				</p>
-				<div class="div-programas">
-					<img class="imagem-programas" src="PL - Assets/pg-cestasbasicas.svg" alt="cestas básicas">
-				</div>
-				<h3 class="text-programas">Cestas Básicas</h3>
-				<p class="p-programas">
-					Entrega de cestas básicas para famílias em situação de vulnerabilidade social.
-				</p>
-			</section>
-			<section class="parceiros" id="ancora5">
-				<h2 class="h2-parceiros">PARCEIROS</h2> 
-				<img class="parceiro1" src="PL - Assets/logo-institutovoce.png" alt="instituto você">
-				<img class="parceiro2" src="PL - Assets/logo-precisaser.svg" alt="instituto precisaser">
-			</section>
-		</main>
-		<footer>
-			<section class="contato1" id="ancora6">
-				<div class="div-contato">
-					<h2 class="h2-contatos">ENTRE EM CONTATO, COLABORE E SEJA TAMBÉM UM PONTINHO DE LUZ</h2>
-					<img class="solzinho" src="PL - Assets/sun-emoticons.svg" alt="um conjunto de 5 sóis com diferentes faces">
-				</div>
-			</section>
-			<section class="contato2">
-				<div class="contato2__div">
-					<div class="icons-contato">
-						<img class="icons" src="PL - Assets/ft-phone.svg" alt="imagem de um telefone">
-						<p class="p-contatos">(21)91234-5678</p>
-					</div>
-					<div class="icons-contato">
-						<img class="icons" src="PL - Assets/ft-mail.svg" alt="imagem de email">
-						<p class="p-contatos">sejaumpontinhodeluz@gmail.com</p>
-					</div>
-					<div class="p-contatos2">
-						<p>
-							Como chegar: partir do Terminal Roberto Silveira (ao lado das Barcas de Niterói), pegar o ônibus  537 para Itaipú da Viação Nossa Senhora do Amparo.
-						</p>
-					</div>
-				</div>
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.1472238627553!2d-42.98920438576625!3d-22.90793998501129!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x998faecc7a6f65%3A0xd1c49a86f68e50dc!2sR.+Argemiro+Azevedo%2C+385+-+Rio+do+Ouro%2C+Niter%C3%B3i+-+RJ%2C+24330-170!5e0!3m2!1spt-BR!2sbr!4v1523192939128" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
-					<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSejaUmPontinhoDeLuz%2F&tabs=timeline&width=500&height=300&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-			</section>
-		</footer>
-	</body>
+			</div>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.1472238627553!2d-42.98920438576625!3d-22.90793998501129!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x998faecc7a6f65%3A0xd1c49a86f68e50dc!2sR.+Argemiro+Azevedo%2C+385+-+Rio+do+Ouro%2C+Niter%C3%B3i+-+RJ%2C+24330-170!5e0!3m2!1spt-BR!2sbr!4v1523192939128" width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+				<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FSejaUmPontinhoDeLuz%2F&tabs=timeline&width=500&height=300&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="300" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+		</section>
+	</footer>
+	<section class="vnw">
+		<p class="vnw__text"> Desenvolvido por alunos do <a class="vnw__link" href="http://www.vainaweb.com.br/">Vai na Web</a></p>
+	</section>
+</body>
 </html>
